--- a/example-full-algo-long.ipynb
+++ b/example-full-algo-long.ipynb
@@ -32,7 +32,7 @@
    "id": "forward-perth",
    "metadata": {},
    "source": [
-    "## System description\n",
+    "## query description\n",
     "The string equation problem with variables $\\mathsf{Var}$ is given by two components:\n",
     " 1. equation $e$ of the form $e_l = e_r$ where $e_l, e_r \\in \\mathsf{Var}^+$. In the code, we use `e_l` and `e_r`.\n",
     " 2. dictionary `constraints`${}\\colon \\mathsf{Var} \\to \\mathsf{RE(\\mathsf{Var})}$. The regular expressions must be given as strings parsable by Awali, see [this guide](http://files.vaucanson-project.org/1.0/gs/RationalExpression.html) for more details."
@@ -330,9 +330,9 @@
    "source": [
     "aut_constraints = {var : awalipy.RatExp(c, alphabet=alph).exp_to_aut() for var, c in constraints.items()}\n",
     "\n",
-    "system = noodler.AutSingleSESystem(eq, aut_constraints)\n",
-    "print(system.eq)\n",
-    "system.show_constraints()"
+    "query = noodler.AutSingleSEQuery(eq, aut_constraints)\n",
+    "print(query.eq)\n",
+    "query.show_constraints()"
    ]
   },
   {
@@ -642,8 +642,8 @@
     }
    ],
    "source": [
-    "n = noodler.QueueNoodler(system)\n",
-    "print(system.eq)\n",
+    "n = noodler.QueueNoodler(query)\n",
+    "print(query.eq)\n",
     "n.one_solution()\n",
     "print(f\"Other {len(n.Q)} unprocessed noodles are in the queue\")\n",
     "n.solutions[0].show_constraints()"
@@ -956,7 +956,7 @@
     }
    ],
    "source": [
-    "switched = system.switched()\n",
+    "switched = query.switched()\n",
     "n = noodler.QueueNoodler(switched)\n",
     "print(switched.eq)\n",
     "n.one_solution()\n",
@@ -980,7 +980,7 @@
    ],
    "source": [
     "%%timeit\n",
-    "n = noodler.QueueNoodler(system)\n",
+    "n = noodler.QueueNoodler(query)\n",
     "n.one_solution()"
    ]
   },
