--- a/pastry-and-noodles.ipynb
+++ b/pastry-and-noodles.ipynb
@@ -32,7 +32,7 @@
    "id": "successful-discovery",
    "metadata": {},
    "source": [
-    "## System description\n",
+    "## query description\n",
     "The string equation problem with variables $\\mathsf{Var}$ is given by two components:\n",
     " 1. equation $e$ of the form $e_l = e_r$ where $e_l, e_r \\in \\mathsf{Var}^+$.\n",
     " 2. dictionary `constraints`${}\\colon \\mathsf{Var} \\to \\mathsf{RE(\\mathsf{Var})}$. The regular expressions must be given as strings parsable by Awali, see [this guide](http://files.vaucanson-project.org/1.0/gs/RationalExpression.html) for more details."
@@ -336,9 +336,9 @@
    "source": [
     "aut_constraints = {var : awalipy.RatExp(c, alphabet=alph).exp_to_aut() for var, c in constraints.items()}\n",
     "\n",
-    "system = noodler.AutSingleSESystem(eq, aut_constraints)\n",
-    "print(system.eq)\n",
-    "system.show_constraints()"
+    "query = noodler.AutSingleSEQuery(eq, aut_constraints)\n",
+    "print(query.eq)\n",
+    "query.show_constraints()"
    ]
   },
   {
@@ -483,7 +483,7 @@
     }
    ],
    "source": [
-    "auts_l = system.automata_for_side(\"left\")\n",
+    "auts_l = query.automata_for_side(\"left\")\n",
     "seg_l = noodler.chain_automata(auts_l)\n",
     "seg_l.display()"
    ]
@@ -782,7 +782,7 @@
    ],
    "source": [
     "# Concatenate automaton for the right hand side\n",
-    "aut_r = noodler.multiop(system.automata_for_side(\"right\"), awalipy.concatenate)\n",
+    "aut_r = noodler.multiop(query.automata_for_side(\"right\"), awalipy.concatenate)\n",
     "aut_r = aut_r.minimal_automaton()\n",
     "# Make ε-preserving product\n",
     "product = noodler.eps_preserving_product(seg_l, aut_r, history=True)\n",
@@ -2501,11 +2501,11 @@
     }
    ],
    "source": [
-    "auts_r = system.automata_for_side(\"right\")\n",
+    "auts_r = query.automata_for_side(\"right\")\n",
     "for noodle in noodles:\n",
     "    print(\"=\"*20)\n",
     "    auts_l = noodler.split_segment_aut(noodle)\n",
-    "    noodle_sys = noodler.create_unified_system(system.eq,\n",
+    "    noodle_sys = noodler.create_unified_query(query.eq,\n",
     "                                               auts_l,\n",
     "                                               auts_r)\n",
     "    noodle_sys.show_constraints()\n",
