--- a/example-full-algo.ipynb
+++ b/example-full-algo.ipynb
@@ -40,7 +40,7 @@
    "id": "known-tribute",
    "metadata": {},
    "source": [
-    "## System description\n",
+    "## query description\n",
     "The string equation problem with variables $\\mathsf{Var}$ is given by two components:\n",
     " 1. equation $e$ of the form $e_l = e_r$ where $e_l, e_r \\in \\mathsf{Var}^+$.\n",
     " 2. dictionary `constraints`${}\\colon \\mathsf{Var} \\to \\mathsf{RE(\\mathsf{Var})}$. The regular expressions must be given as strings parsable by Awali, see [this guide](http://files.vaucanson-project.org/1.0/gs/RationalExpression.html) for more details."
@@ -344,9 +344,9 @@
    "source": [
     "aut_constraints = {var : awalipy.RatExp(c, alphabet=alph).exp_to_aut() for var, c in constraints.items()}\n",
     "\n",
-    "system = noodler.AutSingleSESystem(eq, aut_constraints)\n",
-    "print(system.eq)\n",
-    "system.show_constraints()"
+    "query = noodler.AutSingleSEQuery(eq, aut_constraints)\n",
+    "print(query.eq)\n",
+    "query.show_constraints()"
    ]
   },
   {
@@ -354,7 +354,7 @@
    "id": "extensive-boost",
    "metadata": {},
    "source": [
-    "The solution is a unified and balanced system (of class `AutSingleSESystem`). We know that in such a system, a solution exists. We use `QueueNoodler.one_solution()` to get one unified and balanced system. The system is stored in `QueueNoodler.solutions`. You can visualize the variable constraints of a solution by `solution.show_constraints()`."
+    "The solution is a unified and balanced query (of class `AutSingleSEQuery`). We know that in such a query, a solution exists. We use `QueueNoodler.one_solution()` to get one unified and balanced query. The query is stored in `QueueNoodler.solutions`. You can visualize the variable constraints of a solution by `solution.show_constraints()`."
    ]
   },
   {
@@ -619,8 +619,8 @@
     }
    ],
    "source": [
-    "n = noodler.QueueNoodler(system)\n",
-    "print(system.eq)\n",
+    "n = noodler.QueueNoodler(query)\n",
+    "print(query.eq)\n",
     "n.one_solution().show_constraints()\n",
     "print(f\"Other {len(n.Q)} unprocessed noodles are in the queue\")"
    ]
@@ -634,12 +634,12 @@
     {
      "data": {
       "text/plain": [
-       "[<noodler.noodler.AutSingleSESystem at 0x7f7056754f10>,\n",
-       " <noodler.noodler.AutSingleSESystem at 0x7f705415a070>,\n",
-       " <noodler.noodler.AutSingleSESystem at 0x7f7045c60e80>,\n",
-       " <noodler.noodler.AutSingleSESystem at 0x7f7045c60f10>,\n",
-       " <noodler.noodler.AutSingleSESystem at 0x7f7045c58af0>,\n",
-       " <noodler.noodler.AutSingleSESystem at 0x7f70566fd160>]"
+       "[<noodler.noodler.AutSingleSEQuery at 0x7f7056754f10>,\n",
+       " <noodler.noodler.AutSingleSEQuery at 0x7f705415a070>,\n",
+       " <noodler.noodler.AutSingleSEQuery at 0x7f7045c60e80>,\n",
+       " <noodler.noodler.AutSingleSEQuery at 0x7f7045c60f10>,\n",
+       " <noodler.noodler.AutSingleSEQuery at 0x7f7045c58af0>,\n",
+       " <noodler.noodler.AutSingleSEQuery at 0x7f70566fd160>]"
       ]
      },
      "execution_count": 5,
@@ -658,7 +658,7 @@
    "id": "stuffed-portal",
    "metadata": {},
    "source": [
-    "`system.switched()` is a system with equation that has switched sides. It effectively starts with noodlifying the right-hand side first. Sometimes, it pays off."
+    "`query.switched()` is a query with equation that has switched sides. It effectively starts with noodlifying the right-hand side first. Sometimes, it pays off."
    ]
   },
   {
@@ -950,7 +950,7 @@
     }
    ],
    "source": [
-    "switched = system.switched()\n",
+    "switched = query.switched()\n",
     "n = noodler.QueueNoodler(switched)\n",
     "print(switched.eq)\n",
     "n.one_solution()\n",
@@ -1253,9 +1253,9 @@
    "source": [
     "aut_constraints = {var : awalipy.RatExp(c, alphabet=alph).exp_to_aut() for var, c in constraints.items()}\n",
     "\n",
-    "system = noodler.AutSingleSESystem(eq, aut_constraints)\n",
-    "print(system.eq)\n",
-    "system.show_constraints()"
+    "query = noodler.AutSingleSEQuery(eq, aut_constraints)\n",
+    "print(query.eq)\n",
+    "query.show_constraints()"
    ]
   },
   {
@@ -1545,8 +1545,8 @@
     }
    ],
    "source": [
-    "n = noodler.QueueNoodler(system)\n",
-    "print(system.eq)\n",
+    "n = noodler.QueueNoodler(query)\n",
+    "print(query.eq)\n",
     "n.one_solution().show_constraints()\n",
     "print(f\"Other {len(n.Q)} unprocessed noodles are in the queue\")"
    ]
