Add setup.py to Dockerfile

--- a/benchmarks/slog/Z3.ipynb
+++ b/benchmarks/slog/Z3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "id": "a091d7d6-8c02-4b7c-8cec-23a6f4448e3f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "id": "efeb96a5-a87d-40e5-b4cb-143879346390",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "literal_6 == \"ÿfd <span class='alt'>\""
       ]
      },
-     "execution_count": 83,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "id": "c4029345-82b6-4696-89d9-bd5161e1b5a9",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "'ÿfd'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "id": "11860501-d56e-4705-b2a9-a10dab28342e",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "z3.z3.BoolRef"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "id": "6a1c4502-5801-43fa-9411-bb0316dd3f86",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "id": "cacb18d0-6fb0-4e38-aaae-749249a2c450",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "'='"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
+   "id": "16eb8b1d-07aa-4ae8-8884-3dc74100682b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "258"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eq.decl().kind()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "78feff92-6465-4050-b67a-b877324fd8cb",
    "metadata": {},
    "outputs": [],
@@ -139,23 +160,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "f9368d8f-3a9d-4cc5-9be8-5d2da42300ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "is_inre(smt[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5c9e428d-4cd7-414f-a88e-6cf90585f131",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45100"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allre = smt[-1].children()[1].children()[0].children()[0]\n",
+    "allre.decl().kind()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0e231084-ce46-4905-aabb-035f7d210b97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "literal_6 == \"ÿfd <span class='alt'>\"\n",
+      "x_10 == Concat(literal_6, sigmaStar_0)\n",
+      "literal_7 == \"ÿfd <span class='alt'>\"\n",
+      "x_11 == Concat(literal_7, sigmaStar_1)\n",
+      "literal_8 == \"ÿfd <span class='alt'>\"\n",
+      "x_12 == Concat(literal_8, sigmaStar_4)\n",
+      "literal_9 == \"ÿfd <span class='alt'>\"\n",
+      "x_13 == Concat(literal_9, sigmaStar_2)\n",
+      "literal_14 == \"</span><br>\\n\"\n",
+      "x_19 == Concat(x_10, literal_14)\n",
+      "literal_18 == \"\"\n",
+      "x_20 == Concat(literal_18, x_19)\n",
+      "literal_15 == \"</span><br>\\n\"\n",
+      "x_21 == Concat(x_11, literal_15)\n",
+      "literal_16 == \"</span><br>\\n\"\n",
+      "x_22 == Concat(x_12, literal_16)\n",
+      "Or(x_23 == x_20, x_23 == literal_18)\n",
+      "x_24 == Concat(x_23, x_22)\n",
+      "literal_17 == \"</span><br>\\n\"\n",
+      "x_25 == Concat(x_13, literal_17)\n",
+      "Or(x_27 == x_20, x_27 == literal_18, x_27 == x_24)\n",
+      "x_28 == Concat(x_27, x_21)\n",
+      "Or(x_31 == x_20,\n",
+      "   x_31 == x_28,\n",
+      "   x_31 == literal_18,\n",
+      "   x_31 == x_24)\n",
+      "x_32 == Concat(x_31, x_25)\n",
+      "literal_33 == \"<br><br>\\n\"\n",
+      "Or(x_37 == x_32,\n",
+      "   x_37 == x_20,\n",
+      "   x_37 == x_28,\n",
+      "   x_37 == literal_18,\n",
+      "   x_37 == x_24)\n",
+      "x_38 == Concat(literal_33, x_37)\n",
+      "literal_39 == \"<br>\\n\"\n",
+      "x_41 == Concat(x_38, literal_39)\n",
+      "literal_40 == \"<center><br>\\n\"\n",
+      "x_42 == Concat(literal_40, sigmaStar_3)\n",
+      "x_43 == Concat(x_42, x_41)\n",
+      "x_44 == Concat(x_43, sigmaStar_5)\n",
+      "literal_45 == \"</center><br>\\n\"\n",
+      "x_46 == Concat(x_44, literal_45)\n",
+      "InRe(x_46,\n",
+      "     re.++(Star(re.allchar),\n",
+      "           re.++(Re(\"\\<SCRIPT\"), Star(re.allchar))))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ref in smt:\n",
+    "    print(ref)"
    ]
   },
   {
